k8s/base/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: market-frontend
  namespace: market-siparis
  labels:
    app.kubernetes.io/name: market-frontend
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: market-frontend
